Security and login/register features working. All tests passed.